<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="F4P-bj-ARQ">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Register-->
        <scene sceneID="aNB-er-NXU">
            <objects>
                <viewController storyboardIdentifier="Register" id="F4P-bj-ARQ" customClass="RegisterViewController" customModule="SafelyHunt" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="H2w-IT-g58">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="MUe-bN-ktr">
                                <rect key="frame" x="30" y="68" width="354" height="166"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pseudonym..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T7L-hR-Z0M">
                                        <rect key="frame" x="0.0" y="0.0" width="354" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="next" textContentType="username"/>
                                        <connections>
                                            <outlet property="delegate" destination="F4P-bj-ARQ" id="rcM-TN-YpI"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email adress..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yah-Kj-08b">
                                        <rect key="frame" x="0.0" y="44" width="354" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next" textContentType="email"/>
                                        <connections>
                                            <outlet property="delegate" destination="F4P-bj-ARQ" id="9H9-HL-rDe"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nFk-Sa-yso">
                                        <rect key="frame" x="0.0" y="88" width="354" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="next" secureTextEntry="YES" textContentType="new-password"/>
                                        <connections>
                                            <outlet property="delegate" destination="F4P-bj-ARQ" id="SdS-oI-6UK"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm password..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C3h-PT-Yev">
                                        <rect key="frame" x="0.0" y="132" width="354" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES" textContentType="new-password"/>
                                        <connections>
                                            <outlet property="delegate" destination="F4P-bj-ARQ" id="56X-as-vOv"/>
                                        </connections>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i4O-go-aK5">
                                <rect key="frame" x="60" y="244" width="294" height="40"/>
                                <color key="backgroundColor" red="0.66592890019999995" green="0.54535347219999997" blue="0.33762454990000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="Yan-RW-5gl"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="registerAction" destination="F4P-bj-ARQ" eventType="touchUpInside" id="qtV-hG-BOJ"/>
                                </connections>
                            </button>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="qhd-i7-Wea">
                                <rect key="frame" x="60" y="244" width="294" height="40"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="2jJ-K6-nK4"/>
                        <color key="backgroundColor" red="0.30223849419999999" green="0.4197221994" blue="0.30826809999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="2jJ-K6-nK4" firstAttribute="trailing" secondItem="MUe-bN-ktr" secondAttribute="trailing" constant="30" id="ChP-LJ-a9v"/>
                            <constraint firstItem="MUe-bN-ktr" firstAttribute="centerX" secondItem="H2w-IT-g58" secondAttribute="centerX" id="GY1-EN-oIN"/>
                            <constraint firstItem="qhd-i7-Wea" firstAttribute="leading" secondItem="i4O-go-aK5" secondAttribute="leading" id="HjK-6q-Ohc"/>
                            <constraint firstItem="qhd-i7-Wea" firstAttribute="trailing" secondItem="i4O-go-aK5" secondAttribute="trailing" id="It6-Bi-Ckx"/>
                            <constraint firstItem="qhd-i7-Wea" firstAttribute="top" secondItem="i4O-go-aK5" secondAttribute="top" id="Osf-EE-73p"/>
                            <constraint firstItem="MUe-bN-ktr" firstAttribute="leading" secondItem="2jJ-K6-nK4" secondAttribute="leading" constant="30" id="T6O-GO-Wsj"/>
                            <constraint firstItem="qhd-i7-Wea" firstAttribute="bottom" secondItem="i4O-go-aK5" secondAttribute="bottom" id="W4Y-dZ-309"/>
                            <constraint firstItem="MUe-bN-ktr" firstAttribute="top" secondItem="2jJ-K6-nK4" secondAttribute="top" constant="20" id="bfl-Rm-gjO"/>
                            <constraint firstItem="i4O-go-aK5" firstAttribute="top" secondItem="MUe-bN-ktr" secondAttribute="bottom" constant="10" id="d2h-1W-eOj"/>
                            <constraint firstItem="2jJ-K6-nK4" firstAttribute="trailing" secondItem="i4O-go-aK5" secondAttribute="trailing" constant="60" id="dAt-Pt-ftm"/>
                            <constraint firstItem="i4O-go-aK5" firstAttribute="leading" secondItem="2jJ-K6-nK4" secondAttribute="leading" constant="60" id="kLN-en-vvs"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Register" id="xKM-VS-Ac2"/>
                    <connections>
                        <outlet property="activityIndicator" destination="qhd-i7-Wea" id="5IW-hh-x6m"/>
                        <outlet property="confirmPasswordTextField" destination="C3h-PT-Yev" id="69a-Iq-I9b"/>
                        <outlet property="emailAddressTextField" destination="Yah-Kj-08b" id="P99-AS-suG"/>
                        <outlet property="passwordTextField" destination="nFk-Sa-yso" id="cgw-PM-p8d"/>
                        <outlet property="pseudonymTextField" destination="T7L-hR-Z0M" id="tHI-hA-b2K"/>
                        <outlet property="registerButton" destination="i4O-go-aK5" id="6KR-fc-Iiz"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="vtO-5R-LE7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2995.6521739130435" y="30.803571428571427"/>
        </scene>
    </scenes>
</document>
