...
            turnOffEditingMode()
        }
    }

    private func setTitleSizeNavigationBar() {
        navigationController?.navigationBar.backgroundColor = #colorLiteral(red: 0.6659289002, green: 0.5453534722, blue: 0.3376245499, alpha: 1)
        title = "Draw your area".localized(tableName: "LocalizableMapView")
    }

    // Map mode Editing radius
    /// define radius
    @IBAction func sliderAction() {
        radiusLabel.text = "\(Int(slider.value)) m"
...
        let alertViewController = UIAlertController(
            title: "Info",
            message: "Set the alert distance between you and other users. You will be alerted if someone enters your range and it will be displayed on the map.".localized(tableName: "LocalizableMapView"),
            preferredStyle: .alert
        )

        let dismiss = UIAlertAction(title: "Dismiss".localized(tableName: "Localizable"), style: .default)
        let dontShowInfoRadius = UIAlertAction(title: "Do not see this message again".localized(tableName: "LocalizableMapView"), style: .cancel) { _ in
            UserDefaults.standard.set(false, forKey: UserDefaultKeys.Keys.showInfoRadius)
        }
        dontShowInfoRadius.setValue(colorTintButton, forKey: "titleTextColor")
        alertViewController.addAction(dontShowInfoRadius)
        alertViewController.addAction(dismiss)
...
    private func turnOffEditingMode() {
        monitoringServices.monitoring.area.coordinatesPoints = []
        mapView.isUserInteractionEnabled = true
        navigationController?.navigationBar.backgroundColor = .clear
        navigationController?.navigationBar.isOpaque = true
        navigationController?.navigationBar.isTranslucent = true
        myNavigationItem.title = "Editing area".localized(tableName: "LocalizableAreaListViewController")
        editingArea = false
    }

    /// Draw area selected if area exist
    private func drawAreaSelected() {
        if !monitoringServices.monitoring.area.coordinatesPoints.isEmpty {
...
        }
    }

    /// open setting app if needed
    private func UIApplicationOpenSetting() {
        let alertVC = UIAlertController(
            title: "Error".localized(tableName: "Localizable"),
            message: "We need exact position for best monitoring, you can change in your setting".localized(tableName: "LocalizableMapView"),
            preferredStyle: .alert
        )
        let cancel = UIAlertAction(title: "Cancel".localized(tableName: "Localizable"), style: .default) { _ in
            if self.mapMode == .monitoring {
                self.dismiss(animated: true)
...
