...
                                <color key="backgroundColor" red="0.66592890019999995" green="0.54535347219999997" blue="0.33762454990000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="Szs-1w-uNI"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Start monitoring">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="startMonitoringButton:" destination="85s-eW-G3B" eventType="touchUpInside" id="fHL-1Q-JKj"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="uV2-tX-9nl" firstAttribute="centerX" secondItem="iPI-ga-kwn" secondAttribute="centerX" id="arp-QD-kHG"/>
                            <constraint firstItem="XFk-5Z-EaC" firstAttribute="bottom" secondItem="uV2-tX-9nl" secondAttribute="bottom" id="shd-yY-piW"/>
                            <constraint firstItem="5M0-mE-ypI" firstAttribute="trailing" secondItem="XFk-5Z-EaC" secondAttribute="trailing" id="sii-cR-R47"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="map.fill" catalog="system" id="Awt-rT-zLj"/>
                    <navigationItem key="navigationItem" title="Menu" id="dtv-ce-Lop"/>
                    <connections>
                        <outlet property="bannerView" destination="uV2-tX-9nl" id="pPM-5h-Aqx"/>
                        <outlet property="huntingTableView" destination="5M0-mE-ypI" id="1gk-db-5sA"/>
                        <outlet property="startMonitoringButton" destination="23p-M0-DBx" id="0J0-u9-O12"/>
                    </connections>
                </viewController>
...
